src/tests/testfiles/binary-operators/29.txt
testfiles/binary-operators/29.c:2:5: error: invalid operands to logical 'or' (have 'int' and 'char []')
5 || "&";
^
